objects/TASKRAY__trBaseline_Project__c.object
<CustomObject>
    <description>This is a TaskRay object used to store historical snapshot information on TaskRay Projects.</description>
    <fields>
        <fullName>TASKRAY__Project_End__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Start__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the project is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the project was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the project. Calculated as the difference between the project Start Date and the project Actual Completion Date.</description>
        <inlineHelpText>Number of days that it took to complete the project.</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualHours__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a project is complete. Works in conjunction with the Actual Completion Date field to determine the duration of the project.</description>
        <inlineHelpText>Indicates whether a project is complete.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Progress</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEndDateVariance__c</fullName>
        <formula>IF(
 OR(
    ISBLANK(TASKRAY__trProject__r.TASKRAY__Project_End__c),
    ISBLANK(TASKRAY__Project_End__c)
 ), 
 NULL,
 TASKRAY__trProject__r.TASKRAY__Project_End__c - TASKRAY__Project_End__c)</formula>
        <label>End Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedDuration__c</fullName>
        <description>Used to track the estimated number of days that it should take to complete the project as scheduled. Calculated as the difference between the project Start Date and the project Estimated End Date.</description>
        <inlineHelpText>Estimated number of days that it should take to complete the project as scheduled.</inlineHelpText>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalFeedback__c</fullName>
        <description>External feedback about a customer&apos;s onboarding experience.</description>
        <inlineHelpText>Use this field to capture external feedback about a customer&apos;s onboarding experience.</inlineHelpText>
        <label>External Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalSentiment__c</fullName>
        <description>The external sentiment of a customer onboarding project based on a satisfaction score.</description>
        <inlineHelpText>Use this field to capture the external sentiment of a customer onboarding project.</inlineHelpText>
        <label>External Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Very Unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Very Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedCompletionDate__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the date of when the project is initially projected to be completed. This date will update accordingly to accommodate any scheduling changes up until the project start date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the date of when the project was initially projected to be completed.</inlineHelpText>
        <label>Initial Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedDuration__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the number of days between the project Start Date and the project Initial Projected Completion Date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the duration of the project as it was initially projected.</inlineHelpText>
        <label>Initial Projected Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInternalSentiment__c</fullName>
        <description>The internal sentiment of a customer onboarding project based on a satisfaction score.</description>
        <inlineHelpText>Use this field to capture the internal sentiment of a customer onboarding project.</inlineHelpText>
        <label>Internal Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Very Unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Very Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trLongName__c</fullName>
        <formula>$Label.taskray__taskray_baseline_longname_prefix +&quot; &quot;+ TEXT(DATEVALUE(CreatedDate))+&quot;: &quot;+ TASKRAY__trProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNameSuffix__c</fullName>
        <externalId>true</externalId>
        <label>Baseline Name Suffix</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingSummaryNotes__c</fullName>
        <description>Key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</description>
        <inlineHelpText>Use this field to store key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</inlineHelpText>
        <label>Onboarding Summary Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPrimaryOnboardingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the primary customer contact for onboarding.</description>
        <inlineHelpText>Use this field to identify the primary customer contact for onboarding.</inlineHelpText>
        <label>Primary Onboarding Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Onboarding Contact (TaskRay Baselines)</relationshipLabel>
        <relationshipName>trPrimaryOnboardingProjectBaselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProject__c</fullName>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Baselines</relationshipLabel>
        <relationshipName>TaskRay_Baselines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDateVariance__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(TASKRAY__trProject__r.TASKRAY__Project_Start__c), 
ISBLANK(TASKRAY__Project_Start__c) 
), 
NULL, 
TASKRAY__trProject__r.TASKRAY__Project_Start__c - TASKRAY__Project_Start__c)</formula>
        <label>Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStatus__c</fullName>
        <description>Used to set the status of a project.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4bca81</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>ffb75d</fullName>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>d4504c</fullName>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TaskRay Baseline</label>
    <nameField>
        <label>Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Baselines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>